--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,11 +1,11 @@
-nav{
+.main-nav{
     top: 0%;
     left: 0%;
     margin: 0% auto;
     border-top: 3px solid #F48024;
     min-height: 50px;
     width: 100%;
-    background-color: #e7e9e960;
+    background-color: #e7e9e9;
     box-shadow: 0px 1px 5px #242729;
     display: flex;
     align-items: center;
